# Pets

./: .gitignore  .gitmodules  Clean projects.bat  README.md  lpng1635.7z  victor.txt
AnimQuad/: AnimQuad.sln
AnimQuad/AnimQuad/: AnimQuad.vcxproj  Source.cpp
Arduino/: How to set up VS Code ofr Arduino.md
Arduino/Arduino Simulator/: ArduinoSimulator.sln
Arduino/Arduino Visual Micro Crack/: Crack readme.docx
Arduino/Display Simulator/: Display Simulator.sln  images.gen  main.cpp
Arduino/fonts/: fonts.pdn  textfont.txt
Arduino/main/: 123.vcxproj.filters  Animation.h  Application.cpp  Application.h  ArrayOfExtendedByte.h  Button.cpp  Button.h  Controller.cpp  Controller.h  Core.cpp  Core.h  Display.cpp  Display.h  Font.h  FontCirillic.cpp  FontCirillic.h  Function.h  Graphics.cpp  Graphics.h  Images.cpp  Picture.h  gen_images.h  images.h  imglist.txt  main.ino  main.sln  main.vcxproj  png2hex.bat  stl.h
Arduino/nu_pogodi/: platformio.ini
Arduino/nu_pogodi/display_simu/: CMakeLists.txt  display_simulator.rc  framework.h  main.cpp
Arduino/nu_pogodi/png2hex/: CMakeLists.txt  DBiArray.hpp  DColor.cpp  DColor.hpp  DContainerT.hpp  DImage.cpp  DImage.hpp  DSfinae.hpp  DSizable.hpp  DSizableT.hpp  DSize.hpp  DSizeT.hpp  DString.hpp  DTypes.hpp  DVector.hpp  ExtIntArray.hpp  IDSizable.hpp  main.cpp  png2hex.bat
Arduino/png2hex/: images.gen.cpp  images.gen.h  imglist.txt.cpp  imglist.txt.h
Arduino/sh1106/: main.ino  sh1106.h  sh1106.ino
Billiard 3D OpenGL 2011/: readme.txt
Billiard 3D OpenGL 2011/Billiard/: Billiard.cpp
Billiard 3D OpenGL 2011/Billiard - client/: Billiard - client.cpp
Billiard 3D OpenGL 2011/Billiard - server/: Billiard - server.dsw
Billiard 3D OpenGL 2011/Billiard2/: Billiard.cpp  Billiard2.sln
Billiard 3D OpenGL 2011/Billiards/: .clang-format  .gitignore  CMakeLists.txt  build_and_run.bat  format.ps1  rebuild.bat
Billiard 3D OpenGL 2011/Billiards/cmake/: utils.cmake
Billiard 3D OpenGL 2011/Billiards/inc/: Application.hpp  Window.hpp
Billiard 3D OpenGL 2011/Billiards/inc/common/: ThreadLoop.hpp  Types.hpp  Utils.hpp
Billiard 3D OpenGL 2011/Billiards/inc/core/: Application.hpp  MainWindow.hpp  RenderingLoop.hpp
Billiard 3D OpenGL 2011/Billiards/inc/graphics/: Actor.hpp  Camera.hpp  Director.hpp  Draw.hpp  Drawing.hpp  Scene.hpp  SceneObject.hpp  Stage.hpp  Types.hpp
Billiard 3D OpenGL 2011/Billiards/inc/objects/: Light.hpp  Sphere.hpp  Square.hpp
Billiard 3D OpenGL 2011/Billiards/inc/win/: Application.hpp  ApplicationLoop.hpp  MainWindow.hpp  MessageLoop.cpp  MessageLoop.hpp  Types.hpp  Window.hpp  Windows.hpp
Billiard 3D OpenGL 2011/Billiards/src/: Application.cpp  Window.cpp  main.cpp
Billiard 3D OpenGL 2011/Billiards/src/common/: ThreadLoop.cpp
Billiard 3D OpenGL 2011/Billiards/src/core/: Application.cpp  MainWindow.cpp  RenderingLoop.cpp
Billiard 3D OpenGL 2011/Billiards/src/graphics/: Actor.cpp  Camera.cpp  Director.cpp  Draw.cpp  Drawing.cpp  Scene.cpp  SceneObject.cpp  Stage.cpp
Billiard 3D OpenGL 2011/Billiards/src/objects/: Light.cpp  Sphere.cpp  Square.cpp
Billiard 3D OpenGL 2011/Billiards/src/win/: Application.cpp  ApplicationLoop.cpp  MainWindow.cpp  MessageLoop.cpp  Window.cpp
BilliardOpenGL/Billiard - client/: Billiard - client.dsp  Billiard - client.dsw
BilliardOpenGL/Billiard - server/: Billiard - server.cpp
BilliardOpenGL/Billiard - клиент/: table.h
BilliardOpenGL/Billiard - сервер/: Billiard - server.dsp
CollectionUnitTests/: PointBase.h  SizeBase.h  Source.cpp  Strings.cpp  Utils.cpp  Utils.h  test.sln  test.vcxproj.filters
CollectionUnitTestsMove/: BasicTypes.h  SizeBase.h  Strings.h  Utils.cpp  Utils.h  sfinae.h  test.vcxproj
DPG/DPG/: DList.h  DPG.vcxproj  dpg_container.h  dpg_types.h
External sort HDD/: Sort_HDD.sln
External sort HDD/Sort_HDD/: Sort_HDD.vcxproj  Sort_HDD.vcxproj.filters  external_sort.cpp  external_sort.h  files.cpp  files.h  main.cpp  messages.h  system_config.h
FileManagerConsole/FileManager/: CoreManager.h  animations.cpp  arrays.cpp  arrays.h  components.h  console.h  core.cpp  dispatcher.cpp  files.cpp  object.cpp  player.cpp  string.cpp  stringUtils.cpp  stringlist.cpp  utils.h
HTML+CSS/Gavrilov/: index.html
Input/: CMakeLists.txt  Input.h  Input.sln  Main.cpp  Types.h  WinInput.cpp
Input/Input/: Input.h  Input.vcxproj  Input.vcxproj.filters  Source.cpp  Types.h  WinInput.cpp
PGUI/: PGUI.sln
PGUI Car/CarConsoleTest/: Application.h  CarConsoleTest.vcxproj.filters  (+6 more)
PGUI FileManager/: FileManager.sln
PGUICarConsole/: CarConsoleTest.sln
PGUIMonopolyConsole/: Monopoly.sln
PGUIwithsetget/: PGUI.sln
SFINAE.Presentation/: SFINAE.Presentation.sln
SIMD/: rt.sln
ScreenManager/: ScreenManager.sln
StreamBase (Win Pipes)/: StreamBase.sln
Visual Console Windows/: Visual Console Windows.sln
libimages/: libimages.sln
png2hex/: png2hex.sln
samples/: custom vector byte example.cpp  digits.cpp  files.cpp  keyboard.cpp  pixels.cpp  setgetc++.cpp  span.h  victor.txt
sfinae/: Main.cpp  sfinae_1v.cpp  sfinae_2v.cpp  sfinae_3v.cpp  sfinae_4v.cpp  sfinae_5v.cpp
sh1106/: main.ino  sh1106.cpp
(+751 files in other folders)
